# rust_study

./: README.md
parser/: README.md
webserver/: Cargo.toml  README.md
webserver/src/: keys.rs  main.rs
webserver/src/assets/: route.list
webserver/src/initialize/: listener.rs  mod.rs  route.rs
webserver/src/utils/: string.rs
